force-app/main/default/objects/BrightcoveVideo__c/BrightcoveVideo__c.object-meta.xml
<CustomObject>
    <description>Represents the Brightcove video information that can be associated with an Article</description>
    <label>Brightcove Video</label>
    <nameField>
        <label>Brightcove Video Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Brightcove Videos</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>