force-app/main/default/objects/BrightcoveVideo__c/fields/Description__c.field-meta.xml
<CustomField>
    <fullName>Description__c</fullName>
    <description>The Description as contained within Brightcove</description>
    <inlineHelpText>The Description as contained within Brightcove</inlineHelpText>
    <label>Description</label>
    <length>255</length>
    <type>Text</type>
</CustomField>