force-app/main/default/objects/BrightcoveVideo__c/fields/FolderId__c.field-meta.xml
<CustomField>
    <fullName>FolderId__c</fullName>
    <description>The Brightcove folder ID that the video is associated with.</description>
    <inlineHelpText>The Brightcove folder ID that the video is associated with.</inlineHelpText>
    <label>Folder ID</label>
    <length>120</length>
    <type>Text</type>
</CustomField>