force-app/main/default/objects/BrightcoveVideo__c/fields/LongDescription__c.field-meta.xml
<CustomField>
    <fullName>LongDescription__c</fullName>
    <description>The long, detailed description of the video obtained from Brightcove.</description>
    <inlineHelpText>The long, detailed description of the video obtained from Brightcove.</inlineHelpText>
    <label>Long Description</label>
    <length>5000</length>
    <type>LongTextArea</type>
</CustomField>