force-app/main/default/objects/BrightcoveVideo__c/fields/VideoId__c.field-meta.xml
<CustomField>
    <fullName>VideoId__c</fullName>
    <caseSensitive>true</caseSensitive>
    <description>The Video ID from Brightcove - a unique Identifier.</description>
    <externalId>true</externalId>
    <inlineHelpText>The Video ID from Brightcove - a unique Identifier.</inlineHelpText>
    <label>Video ID</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>